--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
     rel="stylesheet"
     href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
     
-    <title>React App</title>
+    <title>Sneakers shop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
